[package]
name = "todont"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.3"
serde = { version = "1.0.197", features = ["derive"] }
shuttle-axum = "0.40.0"
shuttle-runtime = "0.40.0"
shuttle-shared-db = { version = "0.40.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio-rustls", "chrono"] }
tokio = "1.28.2"
tower-http = { version = "0.5.2", features = ["fs"] }
tower-livereload = "0.9.2"
tracing = "0.1.40"
