[package]
name = "todont"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.3", features = ["macros"] }
serde = { version = "1.0.197", features = ["derive"] }
shuttle-axum = "0.40.0"
shuttle-runtime = "0.40.0"
shuttle-shared-db = { version = "0.40.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid"] }
tokio = "1.28.2"
tower-http = { version = "0.5.2", features = ["fs"] }
tower-cookies = "0.10.0"
tower-livereload = "0.9.2"
tracing = "0.1.40"
chrono = { version = "0.4.35", features = ["serde"] }
uuid = "1.7.0"
serde_json = "1.0.114"
pwhash = "1"
regex = "1.10.3"
base64 = "0.22.0"
